@@ -20,6 +20,42 @@ C<Date> class.
 Current routines provided:
 
 =begin item
+C<days-of-week>
+
+Given the day-of-week (DoW) for the start of a calendar
+week, return a list of the DoWs.
+Access the list with the C<day-index-in-week>.
+
+=begin code
+sub days-of-week(
+    DoW $cal-first-dow = 7, # Sunday
+    :$debug,
+    --> List # range 1..7
+) is export {
+=end code
+=end item
+
+=begin item
+C<day-index-in-week>
+
+Given the day-of-week (DoW) of any day of a week,
+and the starting DoW for a calendar week, 
+this routine returns the index of that DoW
+in a list of the calendar's DoWs.
+Use the index with the list from C<days-of-week>.
+
+=begin code
+sub day-index-in-week(
+    DoW $dow, # range 1..7
+    DoW :$cal-first-dow = 7, # Sunday
+    :$debug,
+    --> UInt # range 0..6
+) is export {...}
+=end code
+=end item
+
+
+=begin item
 C<days-in-week1>
 
 Given the day-of-week (DoW) of the first Date of the month,
